2007-03-27  John W. Eaton  <jwe@octave.org>

	* Makefile.in (dist): Use ln, not $(LN_S).

2007-02-26  From Michael Goffioul  <michael.goffioul@swing.be>

	* Makefile.in: Use $(LN_S) instead of ln or ln -s.

2007-02-20  John W. Eaton  <jwe@octave.org>

	* Makefile.in (check): Use --norc instead of --no-site-file.
	From: Alex Zvoleff  <azvoleff@ucsd.edu>

2007-02-19  John W. Eaton  <jwe@octave.org>

	* test_system.m: Handle confirm_recursive_rmdir as function
	instead of built-in variable.

2007-02-07  John W. Eaton  <jwe@octave.org>

	* fntests.m: Add plea for help writing tests.

2007-01-11  John W. Eaton  <jwe@octave.org>

	* fntests.m: Also handle scripts directory in the build tree.

	* Makefile.in (OCTAVE_SCRIPT_PATH): Delete unused variable.

2006-11-14  Luis F. Ortiz  <lortiz@interactivesupercomputing.com>

	* fntests.m: Include liboctave in the list of directories to test.

2006-08-25  John W. Eaton  <jwe@octave.org>

	* test_io.m (testls): Allow for small variance in loaded values
	for text data formats.  Use persistent local variables instead of
	resetting rand seed.

2006-08-22  David Bateman  <dbateman@free.fr>

	* build_sparse_tests.sh: Don't force conversion to sparse boolean
	return type for string mapper functions.

2006-08-21  John W. Eaton  <jwe@octave.org>

	* test_io.m: Use isequal (a, b) instead of a != b.  Use isequal
	for struct and cell tests instead of more complex constructs.

2006-06-27  John W. Eaton  <jwe@octave.org>

	* Makefile.in (distclean): Also remove test_sparse.m.

2006-06-07  John W. Eaton  <jwe@octave.org>

	* fntests.m: Keep track of files with tests and report total.

2006-06-01  John W. Eaton  <jwe@octave.org>

	* fntests.m (print_test_file_name, print_pass_fail): New functions.
	(runtestdir, runtestscript): Use them.  Print info for each file
	with tests.  Print info about files without tests to log file.
	(run_test_dir): Rename from runtestdir.  Change all uses.